Fix gap between recent post items

--- a/version_control/Codurance_September2020/css/modules/recent-posts-v2.css
+++ b/version_control/Codurance_September2020/css/modules/recent-posts-v2.css
@@ -42,13 +42,13 @@
   overflow: scroll;
   scroll-snap-type: x mandatory;
   scrollbar-width: none;
+  gap: 1.5em;
 }
 
 .cm-recent-post__group::-webkit-scrollbar{
   display: none;
 }
 
-{% set item_margin = 15 %}
 {% set item_border_radius = 10 %}
 
 .cm-recent-post__item {
@@ -57,8 +57,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 1.4rem;
-  margin-left: {{ item_margin }}px;
-  margin-right: {{ item_margin }}px;
   border-radius: {{ item_border_radius }}px;
   min-width: 14em;
   overflow: hidden;
@@ -70,12 +68,6 @@
 {% call utils.large_and_extra_large() %}
   .cm-recent-post__item {
     width: 33.333%;
-  }
-{% endcall %}
-
-{% call utils.medium() %}
-  .cm-recent-post__item {
-    width: calc(50% - ({{ item_margin }}px * 2));
   }
 {% endcall %}
 
